Entregable Final Backend 1 Productos hacia Mongo

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -115,13 +115,39 @@
                 <label for="query">Categoría/Filtro:</label>
                 <select name="query" id="query" class="form-control">
                     <option value="">Todos</option>
-                    <option value="Electronics">Electronics</option>
-                    <option value="Clothing">Clothing</option>
-                    <option value="Books">Books</option>
-                    <option value="Home">Home</option>
-                    <option value="Sports">Sports</option>
-                    <option value="Other">Other</option>
-                    <option value="Cell">Cell</option>
+                    <option value="Electronicos">Electronicos</option>
+                    <option value="Cuardenos y Libretas">Cuardenos y Libretas</option>
+                    <option value="Hogar">Hogar</option>
+                    <option value="Deportes">Deportes</option>
+                    <option value="Celulares">Celulares</option>
+                    <option value="Fideos">Fideos</option>
+                    <option value="Pastas Frescas">Pastas Frescas</option>
+                    <option value="Arroz">Arroz</option>
+                    <option value="Legumbres">Legumbres</option>
+                    <option value="Conservas">Conservas</option>
+                    <option value="Salsas">Salsas</option>
+                    <option value="Galletitas">Galletitas</option>
+                    <option value="Harinas">Harinas</option>
+                    <option value="Aceites">Aceites</option>
+                    <option value="Limpieza">Limpieza</option>
+                    <option value="Bebidas">Bebidas</option>
+                    <option value="Bebidas Alcoholicas">Bebidas Alcoholicas</option>
+                    <option value="Papel">Papel</option>
+                    <option value="Aderezos">Aderezos</option>
+                    <option value="Yerba">Yerba</option>
+                    <option value="Snack">Snack</option>
+                    <option value="Prueba">Prueba</option>
+                    <option value="Dulces">Dulces</option>
+                    <option value="Salados">Salados</option>
+                    <option value="Cereales">Cereales</option>
+                    <option value="Fiambres">Fiambres</option>
+                    <option value="Quesos">Quesos</option>
+                    <option value="Lacteos">Lacteos</option>
+                    <option value="Congelados">Congelados</option>
+                    <option value="Panificados">Panificados</option>
+                    <option value="Tortas">Tortas</option>
+                    <option value="Masas">Masas</option>
+                    <option value="Tartas">Tartas</option>
                     <option value="available">Disponibles</option>
                 </select>
             </div>
